   - Settlement page: a footer paned let the user align footer amounts with the treeview (todo #1467).
   - Settlement page: homogeneize footer display.
   - User may choose display at startup, and when a dossier is opened or closed.

 Bug fixes:

   - configure.ac: display 'pwirender' plugin build status (todo #1453).
   - Fix conversion to DBModel v37 of OFA_T_BAT table.
   - ofaEntryPage: fix initial display of the extended filter (todo #1464).
   - ofaEntryPageDelconf: review dialog layout (todo #1468).
   - ofaEntryStore: fix ENT_TIERS column type.
   - ofaGuidedInputBin: do not override a user-set date when setting a template (todo #1456).
   - ofaHub: fix releasing object with floating references. 
   - ofaMainWindow: better switch back from 'minimal' display mode.
   - ofaPrefs: fix mainbook settings read.
   - ofaReconcilPage: initialize the empty light in the footer.
   - ofaReconcilPage: align header and footer amounts with selection balance.
   - ofaRecurrentRunTreeview: fix refresh bug when cancelling operations.
   - ofoEntry: fix export format for unset counters.

 Other changes:

   - my_utils_window_position_get(): new function.
   - ofaAccountBalance: new (computing) class which implements ofaIExportable.
   - ofaBackupDisplay: new class.
   - ofaIExportable::get_basename(): new method.
   - ofaIExportable::get_published(): new method.
   - ofaIExporter: new interface.
   - ofaIRenderer: interface is completed with font and color getters (todo #1452).
   - ofaRecurrentModelPage: precise the action label (todo #1458).
   - ofaRenderArea: new class which implements ofaIContext. 
   - ofaStreamFormat: is now able to define which fields are user-updatable.
   - ofaTVBin: is now exportable (for now only implemented in ofaEntryPage).
   - core/ofo-entry-fec.{c,h}: new files.

-----------------------------------------------------------------------
 Version 0.69
 ============

 Released on 2017-04-11

 Total files count:    836 files